navbar z-index fixes

--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ color: #f3e0c5;
     width: 100%;
     backdrop-filter: blur(5px);
     background-color: rgba(24, 23, 23, 0.5);
+    z-index: 7;
 }
 
 .container {
